fixed alignment

--- a/exercise1/styles.css
+++ b/exercise1/styles.css
@@ -3,9 +3,8 @@ body {
   padding: 0;
 }
 
-.table2 td {
-  padding-top: 20px;
-  padding-bottom: 20px;
+.table2 {
+  border-spacing: 0 20px;
 }
 
 .box_text_colour {
@@ -31,7 +30,7 @@ body {
   width: 570px;
 }
 
-.table2_img {
+.table2 tr td img {
   width: 570px;
   height: 400px;
   display: block;
